updated thread view

--- a/force-app/main/default/lwc/communityTextarea/communityTextarea.html
+++ b/force-app/main/default/lwc/communityTextarea/communityTextarea.html
@@ -1,13 +1,11 @@
 <template>
     <div class={wrapperClass}>
-        <label for="textareaInput" class="navds-form-field__label navds-label">Din melding</label>
+        <label for="textareaInput" class="navds-form-field__label navds-label">{label}</label>
         <textarea
             aria-invalid={errorState}
-            name="textbox"
             onchange={handleChange}
             oninput={handleMessage}
-            label="Skriv din melding her"
-            class="navds-textarea__input navds-body-short navds-body-short--medium navds-textarea--counter tekstboks minRow"
+            class="navds-textarea__input navds-body-short navds-body-short--medium navds-textarea--counter min-row textBox"
             onfocusout={checkError}
             id="textareaInput"
         >
@@ -19,7 +17,7 @@
             <p aria-live="off" class={remainingCharacterClass}>{remainingCharacterText}</p>
         </template>
         <div aria-relevant="additions removals" aria-live="polite">
-            <template if:true={errorState}>
+            <template lwc:if={errorState}>
                 <div class="navds-error-message navds-label navds-error-message--show-icon">
                     <div class="slds-grid slds-p-bottom_small">
                         <lightning-icon
