--- a/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
+++ b/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
@@ -49,11 +49,10 @@
             </template>
             <template if:true={noItems}>
                 <div class="slds-var-p-vertical_large centerInfobox">
-                    <c-crm-community-alert-stripe
-                        class="alertbox"
-                        type="info"
-                        alerttext="Du har ingen meldinger i innboksen din."
-                    ></c-crm-community-alert-stripe>
+                    <c-community-alert
+                        alert-type="info"
+                        alert-text="Du har ingen meldinger i innboksen din."
+                    ></c-community-alert>
                 </div>
             </template>
         </div>
