--- a/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.html
+++ b/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.html
@@ -143,7 +143,7 @@
                 </form>
             </section>
         </div>
-        <div slot="modalFooter" class="btn-positioning">
+        <div slot="modalFooter" class="modal-footer">
             <button
                 class="navds-button navds-button--primary navds-button--medium button-width"
                 aria-controls="betingelser"
