--- a/force-app/main/default/lwc/communityConfirmation/communityConfirmation.html
+++ b/force-app/main/default/lwc/communityConfirmation/communityConfirmation.html
@@ -1,18 +1,18 @@
 <template>
-    <div class="slds-grid slds-wrap slds-p-top_large slds-p-bottom_large">
+    <div class="slds-grid slds-wrap">
         <div class="slds-col slds-size_12-of-12 slds-medium-size_1-of-12">
             <span class="slds-icon_container">
-                <svg class="slds-icon slds-icon-text-default slds-icon_large" aria-hidden="true" viewBox={viewBox}>
+                <svg class="slds-icon slds-icon-text-default slds-icon_large" aria-hidden="true">
                     <use xlink:href={applicationSuccessSrc}></use>
                 </svg>
             </span>
         </div>
         <div class="slds-col slds-size_11-of-12">
-            <h1 class="navds-heading navds-heading--2xlarge slds-p-bottom_small">{title}</h1>
+            <h1 class="navds-heading navds-heading--large spacing-bottom spacing-top">{title}</h1>
         </div>
         <div class="slds-col slds-size_1-of-12"></div>
         <div class="slds-col slds-size_11-of-12">
-            <p class="slds-p-bottom_small">{text}</p>
+            <p class="spacing-bottom navds-body-long--medium">{text}</p>
         </div>
         <div class="slds-col slds-size_1-of-12"></div>
         <div class="slds-col slds-size_11-of-12">
