--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -1,12 +1,5 @@
 <template>
-    <a
-        class={className}
-        href={linkUrl}
-        key={thread.recordId}
-        id="a"
-        style="background-color: #f2f3f5; border-radius: 5px; display: block"
-        onclick={handleNavigation}
-    >
+    <a class="lenkepanel panel" href={linkUrl} key={thread.recordId} id="a" onclick={handleNavigation}>
         <div class="?">
             <div class="mobilePadding">
                 <div class="slds-grid slds-grid_align-spread slds-p-bottom_small">
@@ -17,7 +10,7 @@
                         year="numeric"
                         hour="2-digit"
                         minute="2-digit"
-                        class="navds-body-short--large navds-label"
+                        class="navds-body-short--medium navds-label"
                     ></lightning-formatted-date-time>
                     <div>
                         <template if:true={showReadStatus}>
@@ -33,7 +26,7 @@
                 </div>
 
                 <h3 class="navds-heading--small navds-link--action slds-p-bottom_x-small">{itemTitle}</h3>
-                <p class="messagebox threeLinesMobile navds-body-long--large">{latestText}</p>
+                <p class="messagebox threeLinesMobile navds-body-long--medium">{latestText}</p>
             </div>
         </div>
     </a>
