fixing review comments

--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -1,5 +1,5 @@
 <template>
-    <a class="lenkepanel panel" href={linkUrl} key={thread.recordId} id="a" onclick={handleNavigation}>
+    <a class="panel" href={linkUrl} key={thread.recordId} id="a" onclick={handleNavigation}>
         <div class="?">
             <div class="mobilePadding">
                 <div class="slds-grid slds-grid_align-spread slds-p-bottom_small">
